src/objects/Employment__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator/Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_Type__c</fullName>
        <label>Experience Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <controllingField>Area_of_Expertise__c</controllingField>
            <picklistValues>
                <fullName>Collaborated or partnered with one or more service programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a non-governmental organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a state or local government agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participated in a service or service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Education &amp; Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After School Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (Higher Ed.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/teacher professional development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Work Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Start/School Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Restoration/Clean Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Reduction/Management/Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife, Land, Vegetation Protection/Restoration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>City-Wide Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Nonprofit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-Based Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12: Elementary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12:  High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12:  Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State-Wide Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Vocational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Account__c</fullName>
        <label>User Account</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <inlineHelpText>Please specify the number of years of experience within the specified area of expertise.</inlineHelpText>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employment</label>
    <nameField>
        <label>Employer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>